plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'fabric-loom' version "${fabric_loom_version}"
}

version = rootProject.version
group = rootProject.group

base {
    archivesName = "${mod_id}-common"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

sourceSets {
    main {
        resources.srcDirs = [project.file('src/main/resources'), project.file('src/generated/resources')]
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net/'
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    compileOnly "net.fabricmc:fabric-loader:${fabric_loader_version}"
    compileOnly 'org.jetbrains:annotations:24.1.0'

    testImplementation platform('org.junit:junit-bom:5.14.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
